--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -1,21 +1,27 @@
+#main {
+  height: 500px;
+  background-color: grey;
+  display: flex;
+  /* flex-direction: column-reverse; */
+  justify-content: space-between;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
+
 .box {
   height: 100px;
-  width: 33.33%;
-  float: left;
+  width: 1000px;
 }
 
 .b1 {
   background-color: coral;
+  /* width: 20%; */
 }
 .b2 {
   background-color: thistle;
+  /* width: 40%; */
 }
 .b3 {
+  /* width: 20%; */
   background-color: wheat;
-}
-
-#main::after {
-  content: "";
-  display: table;
-  clear: both;
 }
