--- a/school_site/style.css
+++ b/school_site/style.css
@@ -41,57 +41,63 @@ h1 {
   text-shadow: -2px 2px 0 coral;
 }
 
-#header {
-  position: relative;
-  padding-top: 50px;
-  background: linear-gradient(45deg, #e9f6f6 50%, coral);
-  color: #66bfbf;
-  text-align: center;
+.wrapper {
+  padding: 4rem 8rem;
 }
 
-#header .cloud {
-  width: 16rem;
-  filter: drop-shadow(-2px 0px 4px black);
-}
-#header .c1 {
-  position: relative;
-  top: 100px;
-  left: 500px;
+/* navbar */
 
-  animation-name: r_l;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+nav {
+  position: sticky;
+  top: 0;
+  background: #fff;
+  padding: 1rem 8rem;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 2px 12px 0 #333;
 }
 
-#header .c2 {
-  position: absolute;
-  bottom: 300px;
-  left: 200px;
-
-  animation-name: l_r;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+nav a {
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
-#header .c3 {
-  position: absolute;
-  left: -400px;
-  top: 100px;
-  animation-name: pass;
-  animation-duration: 20s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+nav .logo {
+  width: 30%;
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
-#header .mount {
-  filter: drop-shadow(-2px 0px 4px black);
-  width: 50rem;
+nav ul {
+  width: 30%;
+  list-style: none;
+  display: flex;
+  align-items: center;
 }
+nav .nav_links {
+  justify-content: center;
+}
+
+nav .social_links {
+  justify-content: flex-end;
+}
+nav .social_links li {
+  margin-left: 1rem;
+}
+
+nav .social_links li i {
+  font-size: 1.5rem;
+  color: #333;
+}
+
+nav .nav_links li {
+  margin: 0 0.5rem;
+}
+/* blogs */
 #blogs {
   background: thistle;
-  padding: 4rem 8rem;
 }
 
 #blogs .blogs-header {
@@ -150,74 +156,36 @@ h1 {
   width: 100%;
 }
 
-#footer {
-  color: #fff;
-  text-align: center;
-  background-color: #66bfbf;
-  padding: 4rem 8rem;
-}
-
-#footer p {
-  margin-top: 1rem;
-}
-#footer i {
-  margin: 0 0.5rem;
-  font-size: 2rem;
-  color: #fff;
-}
-#footer a {
-  text-decoration: none;
-}
-#footer a:hover i {
-  transition: 0.3s ease-in-out;
-  transform: scale(1.2);
-  text-shadow: -1px 1px coral;
-}
-
-@keyframes l_r {
-  0% {
-    bottom: 300px;
-    left: 200px;
-  }
-  50% {
-    bottom: 300px;
-    left: -200px;
-  }
-  100% {
-    bottom: 300px;
-    left: 200px;
-  }
-}
-@keyframes r_l {
-  0% {
-    top: 100px;
-    left: 500px;
-  }
-  50% {
-    top: 100px;
-    left: 800px;
-    transform: scale(1.3);
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 2rem;
   }
 
-  100% {
-    top: 100px;
-    left: 500px;
+  nav {
+    padding: 1rem;
   }
-}
-
-@keyframes pass {
-  0% {
-    left: -400px;
-    top: 100px;
+  nav .logo {
+    width: 100%;
+    text-align: center;
   }
-  50% {
-    top: 100px;
-    left: 1800px;
-    transform: scale(1.3);
+  nav ul {
+    display: none;
   }
 
-  100% {
-    left: -400px;
-    top: 100px;
+  #blogs .blogs-header {
+    text-align: center;
+    flex-direction: column;
+  }
+
+  #blogs .row {
+    flex-direction: column;
+  }
+
+  #blogs .row .col {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  #blogs .row .col:last-child {
+    margin-bottom: 0;
   }
 }
