--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -9,6 +9,10 @@
   overflow: hidden;
 }
 
+.wrapper {
+  padding: 4rem 8rem;
+}
+
 #header .navbar-brand {
   font-size: 2.5rem;
 }
@@ -27,13 +31,7 @@
   font-weight: 700;
   margin-bottom: 2rem;
 }
-#features {
-  padding: 4rem 8rem;
-}
 
-#reviews .carousel-item {
-  padding: 4rem 8rem;
-}
 #reviews h3 {
   font-size: 3rem;
   margin-bottom: 1rem;
@@ -45,4 +43,38 @@
   height: 120px;
   border-radius: 50%;
   margin-right: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding: 2rem;
+  }
+  #header {
+    text-align: center;
+    padding: 2rem;
+    max-height: 100%;
+  }
+  #header #main h1 {
+    font-size: 4rem;
+  }
+
+  #header #main img {
+    margin-top: 2rem;
+
+    position: static;
+    transform: rotate(0deg);
+  }
+
+  #pricing .card {
+    margin-bottom: 2rem;
+  }
+  #pricing .card:last-child {
+    margin: 0;
+  }
+  #features .row div {
+    margin-bottom: 2rem;
+  }
+  #features .row div:last-child {
+    margin: 0;
+  }
 }
